Update ebuild hashes.
Signed-off-by: Arija A. <ari@ari.lt>

--- a/dinolay.conf
+++ b/dinolay.conf
@@ -1,4 +1,4 @@
 [dinolay]
 location = /var/db/repos/dinolay
 sync-type = git
-sync-uri = https://github.com/TruncatedDinosour/dinolay.git
+sync-uri = https://git.ari.lt/ari/dinolay.git
